--- a/style.css
+++ b/style.css
@@ -455,7 +455,8 @@ body{
     font-size: 3vw;
 }
 .page3{
-    height: 40%;
+    height: 52%;
+    padding-top:10vh;
 }
 .page3>h1{
     font-size: 6vw;
@@ -510,4 +511,5 @@ body{
 .foot4 h1{
     font-size: 2vw;
 }
+
 }
